# linkml-abuse

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  about.yaml  project.Makefile  pyproject.toml
assets/: metaslots_attributes.tsv
data/: dogpile.yaml  mixs6_core_for_ss.tsv  mixs6_core_for_ss.yaml  mixs6_for_ss.tsv  mixs_hybrid.yaml
examples/: README.md
project/jsonld/: linkml_abuse.context.jsonld  linkml_abuse.jsonld
project/owl/: linkml_abuse.owl.ttl
project/shacl/: linkml_abuse.shacl.ttl
src/data/examples/: persons.tsv
src/linkml/: linkml_abuse.yaml
src/linkml-abuse/datamodel/: linkml_abuse.py
utils/: find_mixs_variants.py  get_metaclass_slotvals.py  l2s_supplement.py  skip_ranges_not_slots.py  verbatim_sheets.py
