[tool.poetry]
name = "linkml-project-template"
version = "0.1.0"
description = "Sandbox for trying LinkML features"
authors = ["Mark A. Miller <mamillerpa@gmail.com>"]
license = "MIT"
include = ["README.md", "src/linkml", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"
schemasheets = "^0.1.10"
click-log = "^0.4.0"
black = "^22.3.0"
deepdiff = "^5.8.1"
pandas = "^1.4.2"
flake8 = "^4.0.1"
autoflake = "^1.4"
mypy = "^0.961"

[tool.poetry.dev-dependencies]
linkml = "^1.2.16"
mkdocs-material = "^8.2.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
